--- a/src/components/Pre-Header/Pre-Header.css
+++ b/src/components/Pre-Header/Pre-Header.css
@@ -1,5 +1,5 @@
 .pre-header {
-  font-family: "Noto Sans Mono", monospace;
+  font-family: "PT Sans", sans-serif;
   font-size: 12px;
   color: gray;
   display: flex;
