--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,5 +1,6 @@
 .header {
-  font-family: "Noto Sans Mono", monospace;
+  font-family: "PT Sans", sans-serif;
+  font-style: normal;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -14,7 +15,7 @@
 .nav-menu {
   list-style-type: none;
   display: flex;
-  gap: 20px;
+  gap: 40px;
 }
 
 .nav-menu li {
